--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <title>roistat | black friday</title>
+    <title>roistat | чёрная пятница</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header class="header">
+        <div class="logo">
+            <a href="https://roistat.com/"><img src="./img/logo.svg" alt="logo"></a>
+        </div>
+        <nav class="nav">
+            <a class="link" href="#">Наши предложения</a>
+            <a class="link" href="#">Цены</a>
+        </nav>
+    </header>
 </body>
 </html>
