feat: add black friday

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>roistat | чёрная пятница</title>
 </head>
 <body>
+    <div class="spot"></div>
     <header class="header">
         <div class="logo">
             <a href="https://roistat.com/"><img src="./img/logo.svg" alt="logo"></a>
@@ -20,5 +21,15 @@
             <a class="link" href="#">Цены</a>
         </nav>
     </header>
+    <main>
+        <header class="heading">
+            <h1 class="title">
+                <span class="title__first-word">черная</span> <span class="title__second-word">пятница</span>
+            </h1>
+            <div class="star">
+                <img src="./img/star.png" alt="star">
+            </div>
+        </header>
+    </main>
 </body>
 </html>
