feat: add benefit block

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a class="link" href="#">Цены</a>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <header class="heading">
             <h1 class="title">
                 <span class="title__first-word">черная</span> <span class="title__second-word">пятница</span>
@@ -30,6 +30,10 @@
                 <img src="./img/star.png" alt="star">
             </div>
         </header>
+        <div class="benefit">
+            <p>Воспользуйтесь выгодными предложениями от Roistat в ноябре*</p>
+            <button class="btn"><span>Получить выгоду</span> <img src="./img/arrow-right.svg" alt="arrow"></button>
+        </div>
     </main>
 </body>
 </html>
