feat: add ticker

--- a/index.html
+++ b/index.html
@@ -31,9 +31,45 @@
             </div>
         </header>
         <div class="benefit">
-            <p>Воспользуйтесь выгодными предложениями от Roistat в ноябре*</p>
-            <button class="btn"><span>Получить выгоду</span> <img src="./img/arrow-right.svg" alt="arrow"></button>
+            <div class="benefit__desc">
+                <p>Воспользуйтесь выгодными предложениями от Roistat в ноябре*</p>
+                <button class="btn"><span>Получить выгоду</span> <img src="./img/arrow-right.svg" alt="arrow"></button>
+            </div>
+            <div class="benefit__note">
+                <p>*Акция не распространяется на подключение опций, лимитов, которые были подключены ранее до 1.11.2023.</p>
+                <p>Количество предложений ограничено</p>
+            </div>
         </div>
     </main>
+    <section class="ticker ticker-1">
+        <div class="scroller scroller-1">
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+        </div>
+        <div class="scroller scroller-2">
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+        </div>
+    </section>
+    <section class="ticker ticker-2">
+        <div class="scroller scroller-3">
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+        </div>
+        <div class="scroller scroller-4">
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+            <span>2023 black friday</span>
+        </div>
+    </section>
 </body>
 </html>
