feat: add adaptive

--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
             <a class="link" href="#">Наши предложения</a>
             <a class="link" href="#">Цены</a>
         </nav>
+        <div class="burger"></div>
     </header>
     <main class="main">
         <header class="heading">
             <h1 class="title">
                 <span class="title__first-word">черная</span> <span class="title__second-word">пятница</span>
             </h1>
-            <div class="star">
-                <img src="./img/star.png" alt="star">
-            </div>
+            <div class="star"></div>
         </header>
         <div class="benefit">
             <div class="benefit__desc">
